# sensor-net-backend-rs

./: Cargo.toml  Dockerfile  LICENSE  README.md  flake.nix  mod.nu  requests.http
.github/workflows/: nix.yml
db/: init.sql  test_values.sql
src/: lib.rs  main.rs  objects.rs  repository.rs  sensor_net_backend_error.rs
