[package]
name = "sensor-net-backend-rs"
version = "0.1.2"
edition = "2021"
license = "MIT"
description = "tool to batch process images"
readme = "README.md"
repository = "https://github.com/hannes-hochreiner/sensor-net-backend-rs"
publish = false
authors = ["Hannes Hochreiner <hannes@hochreiner.net>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
log = "0.4.0"
env_logger = "0.9.0"
anyhow = "1.0.65"
bb8-postgres = "0.8.1"
tokio-postgres = "0.7.7"
sqlx = { version = "0.6", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono"] }
uuid = { version = "1.1.2", features = ["v4", "serde"] }
chrono = { version = "0.4.22", features = ["serde"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0.85", features = ["std"] }
thiserror = "1.0.35"
# dnf install fontconfig-devel freetype-devel pkgconf-pkg-config
plotters = { version = "0.3" }
url = "2.3"
